Jonas - applied style of login and register page

--- a/client/src/assets/sass/config.sass
+++ b/client/src/assets/sass/config.sass
@@ -48,5 +48,6 @@ $font-size-headline: 17px
 $font-size-headline-weight: 600
 $font-size-body: 17px
 $font-size-action: 15px
+$font-size-action-weight: 600
 $font-size-subheader: 15px
 $font-size-footnote: 13px
