--- a/client/src/styles/utils.sass
+++ b/client/src/styles/utils.sass
@@ -1,24 +1,58 @@
-@mixin title-1
+@mixin effect-focus
+  &:focus
+    outline: 2px solid var(--text-action)
+    outline-offset: 2px
+  // As of writing Safari doesn't support :focus-visible yet,
+  // and just ignores all rules that contain :focus-visible
+  &:focus-visible, &:focus
+    outline: none
+  &:focus-visible
+    outline: 2px solid var(--text-action)
+    outline-offset: 2px
+
+@mixin text-title-1
   font-size: 28px
   line-height: 34px
 
-@mixin headline
+@mixin text-headline
   font-size: 17px
   line-height: 22px
   text-: none
+  font-weight: 600
 
-@mixin body
+@mixin text-body
   font-size: 17px
   line-height: 22px
 
-@mixin action
+@mixin text-action
+  font-size: 15px
+  line-height: 20px
+  font-weight: 600
+
+@mixin text-subhead
   font-size: 15px
   line-height: 20px
 
-@mixin subhead
-  font-size: 15px
-  line-height: 20px
-
-@mixin footnote
+@mixin text-footnote
   font-size: 13px
   line-height: 18px
+
+$radius-menu: 12px
+$radius-button: 32px
+$radius-input: 12px
+$radius-checkbox: 12px
+
+$button-height: 32px
+$input-height: 48px
+
+// Spacing and sizing
+$size-xxxxsmall: 4px
+$size-xxxsmall: 8px
+$size-xxsmall: 12px
+$size-xsmall: 16px
+$size-small: 24px
+$size-medium: 32px
+$size-large: 40px
+$size-xlarge: 48px
+$size-xxlarge: 64px
+$size-huge: 80px
