--- a/client/src/styles/global.sass
+++ b/client/src/styles/global.sass
@@ -1,5 +1,4 @@
 @use '@/styles/variables.sass'
-@use '@/styles/utils.sass' as allmende
 
 ul, ol, li, button, input, textarea, select
   margin: 0
@@ -16,7 +15,7 @@ body, html, #app-root
   height: 100%
 
 body
-  @include allmende.body
+  @include allmende.text-body
   font-family: "Inter"
   font-size: 17px
   margin: 0
