--- a/client/src/styles/global.sass
+++ b/client/src/styles/global.sass
@@ -1,5 +1,9 @@
 @use '@/styles/variables.sass'
 
+*
+  margin: 0
+  padding: 0
+
 ul, ol, li, button, input, textarea, select
   margin: 0
   padding: 0
