--- a/client/src/styles/variables.sass
+++ b/client/src/styles/variables.sass
@@ -19,18 +19,19 @@
   --icon-default: #3e5c50
   --icon-disabled: #96b69c
   --border-seperator: #e1eae1
-  --border-focus: #3e5c50
+  --border-focus: rgba(62, 92, 80, 0.75)
   --box-shadow: 0px 8px 48px #556558
 
 *[data-theme="dark"]
+  color: var(--text-primary)
   --action-primary: #e1eae1
   --action-primary-hover: #c3d5c5
   --action-primary-active: #96b69c
   --action-primary-disabled: rgba(225,234,225,0.500)
-  --action-secondary: #979bad
-  --action-secondary-hover: #8b8fa2
-  --action-secondary-active: #7f8396
-  --action-secondary-disabled: rgba(151,155,173,0.500)
+  --action-secondary: #547964
+  --action-secondary-hover: #6a9577
+  --action-secondary-active: #82a78b
+  --action-secondary-disabled: rgba(84,121,100,0.500)
   --text-primary: #f0f5f0
   --text-secondary: #c3d5c5
   --text-inverted: #15211f
@@ -43,5 +44,5 @@
   --icon-default: #c3d5c5
   --icon-disabled: #547964
   --border-seperator: #3e5c50
-  --border-focus: #3e5c50
+  --border-focus: rgba(225, 234, 225, 0.75)
   --box-shadow: 0px 8px 48px #000000
