--- a/client/src/styles/utils.sass
+++ b/client/src/styles/utils.sass
@@ -57,6 +57,12 @@
   font-size: 13px
   line-height: 18px
 
+@mixin text-navbar
+  font-size: 28px
+  font-family: "Optima"
+  font-weight: normal
+  font-style: normal
+
 $radius-menu: 12px
 $radius-button: 32px
 $radius-input: 4px
