--- a/client/src/styles/variables.sass
+++ b/client/src/styles/variables.sass
@@ -20,7 +20,7 @@
   --icon-disabled: #96b69c
   --border-seperator: #e1eae1
   --border-focus: rgba(62, 92, 80, 0.75)
-  --box-shadow: 0px 8px 48px #556558
+  --shadow-card: 0px 0px 12px rgba(85, 101, 90, 0.2), 0px 8px 48px rgba(85, 101, 88, 0.3)
 
 *[data-theme="dark"]
   color: var(--text-primary)
@@ -45,4 +45,4 @@
   --icon-disabled: #547964
   --border-seperator: #3e5c50
   --border-focus: rgba(225, 234, 225, 0.75)
-  --box-shadow: 0px 8px 48px #000000
+  --shadow-card: 0px 8px 48px #000000
