Julian - Navigation bar

--- a/client/src/styles/utils.sass
+++ b/client/src/styles/utils.sass
@@ -44,6 +44,12 @@
   font-size: 13px
   line-height: 18px
 
+@mixin text-label
+  font-size: 10px
+  font-weight: 700
+  line-height: 14px
+  text-transform: uppercase
+
 @mixin text-navbar
   font-size: 28px
   font-family: "Optima"
@@ -52,6 +58,7 @@
 
 $radius-menu: 12px
 $radius-button: 32px
+$radius-card: 32px
 $radius-input: 4px
 $radius-checkbox: 12px
 
