--- a/client/src/styles/variables.sass
+++ b/client/src/styles/variables.sass
@@ -21,6 +21,7 @@
   --border-seperator: #e1eae1
   --border-focus: rgba(62, 92, 80, 0.75)
   --shadow-card: 0px 0px 12px rgba(85, 101, 90, 0.2), 0px 8px 48px rgba(85, 101, 88, 0.3)
+  --shadow-card-subtle: 0px 0px 12px rgba(85, 101, 90, 0.2), 0px 8px 24px rgba(85, 101, 88, 0.3)
 
 *[data-theme="dark"]
   color: var(--text-primary)
@@ -46,3 +47,4 @@
   --border-seperator: #3e5c50
   --border-focus: rgba(225, 234, 225, 0.75)
   --shadow-card: 0px 8px 48px #000000
+  --shadow-card-subtle: 0px 8px 48px #000000
