--- a/client/src/styles/global.sass
+++ b/client/src/styles/global.sass
@@ -19,7 +19,7 @@ body, html, #app-root
   height: 100%
 
 body
-  // overflow-x: hidden
+  overflow-x: hidden
   @include allmende.text-body
   font-family: "Inter"
   margin: 0
