Navigation and partial upload UI (#53)
* Julian - Updated fonts

* Julian - Changed client dev-port to 5000

* Julian - Updated styles

* Julian - Navigation bar

* Refactored Post component

* Linter - Fix code style issues with Prettier for client

* Fixed linter error

Co-authored-by: Linter Action <norepy@allmende>

--- a/client/src/styles/global.sass
+++ b/client/src/styles/global.sass
@@ -19,6 +19,7 @@ body, html, #app-root
   height: 100%
 
 body
+  overflow-x: hidden
   @include allmende.text-body
   font-family: "Inter"
   margin: 0
