Changed species selector UI

--- a/client/src/styles/utils.sass
+++ b/client/src/styles/utils.sass
@@ -61,6 +61,7 @@
 @mixin text-navbar
   font-size: 28px
   font-family: "Optima"
+  line-height: 34px
   font-weight: normal
   font-style: normal
 
